hphp/hack/test/typecheck/test_consts12.php.exp
File "test_consts12.php", line 2, characters 7-8:
This class must provide an implementation for the abstract constant 'X' (Typing[4047])
File "test_consts12.php", line 3, characters 18-18:
Declaration is here
