hphp/hack/test/typecheck/test_consts12.php
<?hh // partial
class C1 {
  abstract const X;
}
